fixed gap between navbar and page content caused by new, narrower navbar

--- a/apps/frontend/src/styles/csvPage.css
+++ b/apps/frontend/src/styles/csvPage.css
@@ -1,5 +1,5 @@
 .csv-page-container {
-  margin-left: 20vw;
+  float: right;
 }
 
 .input-title-text,
